# compute

./: .gitignore  .gitmodules  CMakeLists.txt  ComputeTracer.sln  INTERACTIVE_CONTROLS.md  LICENSE  Light.cs  MATERIAL_GUIDE.md  Material.cs  Plane.cs  QUICK_START.md  README.md  Sphere.cs  TraceableScene.cs  project.godot  show_texture.gdshader  sphere_data.txt  traceable_scene.tscn  tracer.glsl
.github/workflows/: cmake.yml
GLRaytracer/: Camera.cpp  Camera.hpp  Compute.cpp  Compute.hpp  GLUtils.cpp  GLUtils.hpp  Main.cpp  Material.cpp  Material.hpp  Player.cpp  Player.hpp  SDLHelper.cpp  SDLHelper.hpp  Shader.cpp  Shader.hpp  Sphere.hpp  Utils.hpp
GlRayTracer/: Camera.cpp  Camera.hpp  Compute.cpp  Compute.hpp  GlRayTracer.pro  GlUtils.cpp  GlUtils.hpp  GlfwHandler.cpp  GlfwHandler.hpp  Light.hpp  Main.cpp  Material.hpp  Plane.hpp  Player.cpp  Player.hpp  SdlManager.cpp  SdlManager.hpp  Shader.cpp  Shader.hpp  Sphere.hpp  Transform.cpp  Transform.hpp  Utils.hpp
extlibs/glad/include/glad/: glad.h
extlibs/glad/src/: glad.c
shaders/: pathtracer.cs.glsl  random.glsl  raytracer.cs.glsl  raytracer.frag.glsl
